--- a/CcsSportScheduler/CcsSportScheduler_API/ClientApp/src/components/Schedule.css
+++ b/CcsSportScheduler/CcsSportScheduler_API/ClientApp/src/components/Schedule.css
@@ -1,9 +1,61 @@
 ﻿/* Schedule.css */
 
+.event-fiksni {
+    background-color: gray;
+    color: white;
+}
+
+.event-plivajuci {
+    background-color: yellow;
+    color: black;
+}
+
+.event-trenerski {
+    background-color: green;
+    color: white;
+}
+
+.event-vanredni {
+    background-color: red;
+    color: white;
+}
+
+.event-neclanski {
+    background-color: blue;
+    color: white;
+}
+
+.event-klupski {
+    background-color: brown;
+    color: white;
+}
+
+.legend-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; /* Tri elementa po redu */
+    gap: 10px; /* Razmak između elemenata */
+    justify-items: start; /* Poravnaj elemente levo */
+    margin-bottom: 20px;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+    justify-content: start; /* Poravnaj sadržaj levo */
+}
+
+.legend-color {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+
 /* Stil za kalendar */
 .fc {
-    max-width: 900px;
+    width: 333.33%; /* Postavi kalendar da zauzima 200% širine kako bi se smanjio zoom */
     margin: 0 auto;
+    transform: scale(0.3); /* Smanji zoom na 50% */
+    transform-origin: top left; /* Postavi tačku porekla na gornji levi ugao */
 }
 
 /* Stil za događaje */
@@ -47,4 +99,34 @@
 
 .modal-body {
     font-size: 16px;
+}
+
+/* Stilovi za kolone i kontejnere */
+.fc-col-header-cell {
+    width: calc(18ch); /* Širina kolona za dane i datume */
+    min-width: calc(18ch); /* Minimalna širina kolona */
+}
+
+.fc-timegrid-col {
+    width: calc(18.5ch); /* Širina kolone određena sa 22.5 karaktera */
+    min-width: calc(18.5ch); /* Minimalna širina kolone */
+}
+
+.zoom-container {
+    display: flex;
+    justify-content: center; /* Horizontalno centriranje */
+    overflow: auto; /* Omogući pomeranje u oba smera */
+    width: 100%;
+    white-space: nowrap; /* Spreči prelom linije */
+}
+
+.zoom-content {
+    display: inline-block; /* Omogući horizontalno pomeranje sadržaja */
+    width: 100%; /* Širina sadržaja je 100% */
+}
+
+.centerContainer {
+    display: flex;
+    justify-content: center; /* Horizontalno centriranje */
+    align-items: center; /* Vertikalno centriranje */
 }
