--- a/Universal_Esir/UniversalEsir/Views/AppMain/AdminView.xaml
+++ b/Universal_Esir/UniversalEsir/Views/AppMain/AdminView.xaml
@@ -42,8 +42,8 @@
                 <MenuItem Header="Dodaj">
                     <MenuItem Header="Dodaj prostoriju"
                           Command="{Binding OpenWindowAddNewRoomCommand}"/>
-                    <MenuItem Header="Dodaj platno mesto"
-                          Command="{Binding OpenWindowAddNewPaymentPlaceCommand}"/>
+                    <!--<MenuItem Header="Dodaj platno mesto"
+                          Command="{Binding OpenWindowAddNewPaymentPlaceCommand}"/>-->
                 </MenuItem>
                 <MenuItem Header="Postavke">
                     <MenuItem Header="Izmeni trenutnu prostoriju"
