--- a/CcsSportScheduler/CcsSportScheduler_API/ClientApp/src/components/Schedule.css
+++ b/CcsSportScheduler/CcsSportScheduler_API/ClientApp/src/components/Schedule.css
@@ -102,21 +102,29 @@
     font-size: 16px;
 }
 
- /*Stilovi za kolone i kontejnere */
-/*.fc-col-header-cell {
-    width: calc(18ch);*/  /*Širina kolona za dane i datume */
-    /*min-width: calc(18ch);*/  /*Minimalna širina kolona */
-/*}
+/* Stilovi za kolone i kontejnere */
+.fc-col-header-cell {
+    /*width: calc(21.5ch);*/ /*Širina kolona za dane i datume */
+    /*min-width: calc(21.5ch);*/ /*Minimalna širina kolona */
+    font-size: 8px;
+}
 
 .fc-timegrid-col {
-    width: calc(18.5ch);*/  /*Širina kolone određena sa 18.5 karaktera */
-    /*min-width: calc(18.5ch);*/ /* Minimalna širina kolone */
+    /*width: calc(22ch);*/ /*Širina kolone određena sa 22 karaktera */
+    /*min-width: calc(22ch);*/ /* Minimalna širina kolone */
+    font-size: 8px;
+}
+
+/* Postavi osnovni zoom na 70% */
+/*.zoomed-out {
+    transform: scale(0.7);*/ /* Smanji sadržaj na 70% */
+    /*transform-origin: top left;*/ /* Zadrži gornji levi ugao kao tačku porekla */
 /*}*/
 
 .zoom-container {
     display: flex;
     justify-content: center; /* Horizontalno centriranje */
-    overflow: hidden; /* Spreči horizontalno pomeranje */
+    overflow: auto; /* Omogući horizontalno i vertikalno pomeranje */
     width: 100%;
     white-space: nowrap; /* Spreči prelom linije */
 }
@@ -135,4 +143,35 @@
 
 .notifications-container {
     margin-top: 0px; /* Smanji razmak između kalendara i notifikacija */
+}
+
+/* Stilovi za kolone i kontejnere */
+.fc-col-header-cell {
+    /*width: calc(21.5ch);*/ /*Širina kolona za dane i datume */
+    /*min-width: calc(21.5ch);*/ /*Minimalna širina kolona */
+    font-size: 8px;
+}
+
+.fc-timegrid-col {
+    /*width: calc(22ch);*/ /*Širina kolone određena sa 22 karaktera */
+    /*min-width: calc(22ch);*/ /* Minimalna širina kolone */
+    font-size: 8px;
+}
+/* Različite veličine fonta za različite rezolucije ekrana */
+@media (max-width: 600px) {
+    .fc-event, .event-fiksni, .event-plivajuci, .event-trenerski, .event-vanredni, .event-neclanski, .event-klupski, .event-moderator {
+        font-size: 7.5px; /* Mala rezolucija */
+    }
+}
+
+@media (min-width: 601px) and (max-width: 1200px) {
+    .fc-event, .event-fiksni, .event-plivajuci, .event-trenerski, .event-vanredni, .event-neclanski, .event-klupski, .event-moderator {
+        font-size: 12px; /* Srednja rezolucija */
+    }
+}
+
+@media (min-width: 1201px) {
+    .fc-event, .event-fiksni, .event-plivajuci, .event-trenerski, .event-vanredni, .event-neclanski, .event-klupski, .event-moderator {
+        font-size: 16px; /* Velika rezolucija */
+    }
 }
