--- a/Universal_Esir/UniversalEsir/Views/AppMain/Statistic/ClanoviView.xaml
+++ b/Universal_Esir/UniversalEsir/Views/AppMain/Statistic/ClanoviView.xaml
@@ -23,7 +23,7 @@
                 <MenuItem Header="Članarina"
                           Command="{Binding AddNewClanarinaCommand}"/>
                 <MenuItem Header="Povrat pozajmice"
-                          Command="{Binding PovratPozajmiceCommand}"/>
+                          Command="{Binding AddNewPozajmicaIsplataCommand}"/>
             </MenuItem>
             <MenuItem Header="Uplate">
                 <MenuItem Header="Uplata"
