--- a/Universal_Esir/UniversalEsir/Views/Sale/SaleView.xaml
+++ b/Universal_Esir/UniversalEsir/Views/Sale/SaleView.xaml
@@ -643,6 +643,11 @@
                                     Grid.Column="0"
                                     Command="{Binding ResetAllCommand}"
                                     Style="{StaticResource RoundCorner}"/>
+                            <Button Content="Uplata"
+                                    FontSize="24"
+                                    Grid.Column="1"
+                                    Command="{Binding OpenUplataKonobarCommand}"
+                                    Style="{StaticResource RoundCorner}"/>
                             <!--<Button Content="Obriši"
                                     FontSize="24"
                                     Grid.Column="1"
